<resources>
    <string name="app_name">Cashout Charge Calculator</string>
    <string name="bkash">বিকাশ</string>
    <string name="rocket">রকেট</string>
    <string name="nagad">নগদ</string>
    <string name="developed_by_sparse_brainer">Developer: sparse_brainer (Sabid)</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="charge_info">-এ ক্যাশআউট করার ক্ষেত্রে খরচের তথ্য জানতে নিচে পরিমাণ উল্লেখ করুন।</string>
    <string name="amount_tk">টাকার পরিমাণ উল্লেখ করুন</string>
    <string name="amount_prompt">পরিমাণঃ</string>
    <string name="show_result">হিসাব দেখুন</string>
    <string name="no_calculations">এখনো কোনো হিসাব করা হয়নি</string>
</resources>